[package]
name = "mcts-lib"
version = "0.1.0"
authors = ["Ivan Yaremenchuk <trooper982@gmail.com>"]
edition = "2024"
description = "A small and simple library for Monte Carlo tree search"
license = "MIT"
repository = "https://github.com/darkcodi/mcts-lib"
keywords = [
    "mcts",
    "monte-carlo",
    "tree-search",
    "heuristic",
    "decision-making",
]
categories = [
    "algorithms",
    "game-development",
]

[dependencies]
fastmurmur3 = "0.2"
id_tree = "1.8"
rand = "0.8"
uuid = "1.5"
