[package]
name = "mcts-lib"
version = "0.2.2"
authors = ["Ivan Yaremenchuk <trooper982@gmail.com>"]
edition = "2024"
description = "A small and simple library for Monte Carlo tree search"
license-file = "LICENSE"
repository = "https://github.com/darkcodi/mcts-lib"
keywords = [
    "mcts",
    "monte-carlo",
    "tree-search",
    "heuristic",
    "decision-making",
]
categories = [
    "algorithms",
    "game-development",
]

[dependencies]
id_tree = "1.8"
rand = "0.9"

[[example]]
name = "tic_tac_toe"
path = "examples/tic_tac_toe.rs"
test = true
harness = false
